--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0"
   },
   "dependencies": {
-    "react": "^15.0.0"
+    "react": "^15.3.2 || ~0.14.0",
+    "react-pdf-js": "^1.0.31"
   }
 }
