Fix deprecation warning of prop-types

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-stage-0": "^6.16.0"
   },
   "dependencies": {
+    "prop-types": "^15.5.10",
     "react": "^15.3.2 || ~0.14.0",
     "react-pdf-js": "^1.0.31"
   }
