--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mgr-pdf-viewer-react",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Simple react PDF viewer component. Based on PDF.js.",
   "main": "index.js",
   "repository": {
@@ -8,20 +8,25 @@
     "type": "git"
   },
   "scripts": {
-    "build": "./node_modules/.bin/babel src/index.js -o index.js",
+    "build": "./node_modules/.bin/rollup-babel-lib-bundler src/index.js",
     "prepublish": "npm run build"
   },
   "author": "MGrin",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-es2015-rollup": "^3.0.0",
     "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0"
+    "babel-preset-stage-0": "^6.16.0",
+    "rollup-babel-lib-bundler": "^3.1.0"
   },
   "dependencies": {
     "prop-types": "^15.5.10",
     "react": "^15.3.2 || ~0.14.0",
     "react-pdf-js": "^1.0.31"
+  },
+  "rollupBabelLibBundler": {
+     "moduleName": "mgr-pdf-viewer-react",
+     "dest": "dist",
+     "format": ["cjs"]
   }
 }
