--- a/example/package.json
+++ b/example/package.json
@@ -5,8 +5,7 @@
   "homepage": "https://mgrin.github.io/mgr-pdf-viewer-react",
   "dependencies": {
     "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-pdf-js": "^2.0.5"
+    "react-dom": "^16.0.0"
   },
   "devDependencies": {
     "gh-pages": "^1.0.0",
