--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "rollup-babel-lib-bundler": "^3.1.0"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "material-design-icons": "^3.0.1",
+    "popper.js": "^1.15.0",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-pdf-js": "^2.0.5"
