Updated Keywords in package.json

--- a/package.json
+++ b/package.json
@@ -38,5 +38,13 @@
         "format": [
             "cjs"
         ]
-    }
+    },
+    "keywords": [
+        "pdf",
+        "pdf viewer",
+        "rotate",
+        "zoom",
+        "react",
+        "reactjs"
+    ]
 }
