Added onPrevBtnClick and onNextBtnClick functions for page navigation

--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
         "pdf",
         "pdf viewer",
         "rotate",
+        "rotate pdf",
         "zoom",
+        "zoom pdf",
         "react",
         "reactjs"
     ]
