--- a/package.json
+++ b/package.json
@@ -2,43 +2,58 @@
     "name": "pdf-viewer-reactjs",
     "version": "1.0.3",
     "description": "Simple react PDF viewer component with controls based on PDF.js.",
-    "main": "index",
-    "typings": "index",
+    "main": "dist/index.js",
+    "module": "dist/index.es.js",
+    "jsnext:main": "dist/index.es.js",
+    "browser": "dist/index.umd.js",
     "repository": {
         "url": "https://github.com/ansu5555/pdf-viewer-reactjs",
         "type": "git"
     },
     "scripts": {
-        "build": "./node_modules/.bin/rollup-babel-lib-bundler src/index.js",
-        "prepublish": "npm run build"
+        "build": "rollup -c",
+        "start_rollup": "rollup -c -w",
+        "prepublish": "npm run build",
+        "start": "parcel --out-dir build ./example/index.html"
     },
-    "author": "ansu5555",
+    "author": "dalerleo",
     "license": "MIT",
     "devDependencies": {
-        "babel-preset-es2015-rollup": "^3.0.0",
-        "babel-preset-react": "^6.16.0",
-        "babel-preset-stage-0": "^6.16.0",
-        "rollup-babel-lib-bundler": "^3.1.0"
+        "@babel/core": "^7.5.5",
+        "@babel/plugin-proposal-class-properties": "^7.5.5",
+        "@babel/preset-env": "^7.5.5",
+        "@babel/preset-react": "^7.0.0",
+        "babel-plugin-external-helpers": "^6.22.0",
+        "babelrc-rollup": "^3.0.0",
+        "cross-env": "^5.1.4",
+        "gh-pages": "^1.2.0",
+        "parcel-bundler": "^1.12.3",
+        "react": "^16.0.0",
+        "react-dom": "^16.4.1",
+        "react-scripts": "^1.1.4",
+        "rollup": "^1.16.2",
+        "rollup-plugin-babel": "^4.3.3",
+        "rollup-plugin-commonjs": "^9.1.3",
+        "rollup-plugin-node-resolve": "^3.3.0",
+        "rollup-plugin-peer-deps-external": "^2.2.0",
+        "rollup-plugin-postcss": "^1.6.2",
+        "rollup-plugin-url": "^1.4.0"
     },
     "dependencies": {
         "bootstrap": "^4.3.1",
         "jquery": "^3.4.1",
         "material-design-icons": "^3.0.1",
         "popper.js": "^1.15.0",
-        "prop-types": "^15.6.0",
-        "react": "^16.0.0",
         "react-pdf-js": "^2.0.5"
     },
     "peerDependencies": {
-        "react": ">=15.3.2"
+        "prop-types": "^15.7.2",
+        "react": "^15.0.0 || ^16.0.0",
+        "react-dom": "^15.0.0 || ^16.0.0"
     },
-    "rollupBabelLibBundler": {
-        "moduleName": "pdf-viewer-reactjs",
-        "dest": "dist",
-        "format": [
-            "cjs"
-        ]
-    },
+    "files": [
+        "dist"
+    ],
     "keywords": [
         "pdf",
         "pdf viewer",
