--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "pdf-viewer-reactjs",
+    "name": "react-styled-pdf",
     "version": "1.0.3",
     "description": "Simple react PDF viewer component with controls based on PDF.js.",
     "main": "dist/index.js",
@@ -7,13 +7,12 @@
     "jsnext:main": "dist/index.es.js",
     "browser": "dist/index.umd.js",
     "repository": {
-        "url": "https://github.com/ansu5555/pdf-viewer-reactjs",
+        "url": "https://github.com/DalerLeo/react-styled-pdf",
         "type": "git"
     },
     "scripts": {
         "build": "rollup -c",
         "start_rollup": "rollup -c -w",
-        "prepublish": "npm run build",
         "start": "parcel --out-dir build ./example/index.html"
     },
     "author": "dalerleo",
@@ -23,21 +22,16 @@
         "@babel/plugin-proposal-class-properties": "^7.5.5",
         "@babel/preset-env": "^7.5.5",
         "@babel/preset-react": "^7.0.0",
-        "babel-plugin-external-helpers": "^6.22.0",
         "babelrc-rollup": "^3.0.0",
-        "cross-env": "^5.1.4",
         "gh-pages": "^1.2.0",
         "parcel-bundler": "^1.12.3",
         "react": "^16.0.0",
         "react-dom": "^16.4.1",
-        "react-scripts": "^1.1.4",
-        "rollup": "^1.16.2",
+        "rollup": "^1.17.0",
         "rollup-plugin-babel": "^4.3.3",
-        "rollup-plugin-commonjs": "^9.1.3",
-        "rollup-plugin-node-resolve": "^3.3.0",
-        "rollup-plugin-peer-deps-external": "^2.2.0",
-        "rollup-plugin-postcss": "^1.6.2",
-        "rollup-plugin-url": "^1.4.0"
+        "rollup-plugin-commonjs": "^10.0.1",
+        "rollup-plugin-node-resolve": "^5.2.0",
+        "rollup-plugin-postcss": "^2.0.3"
     },
     "dependencies": {
         "bootstrap": "^4.3.1",
@@ -52,7 +46,8 @@
         "react-dom": "^15.0.0 || ^16.0.0"
     },
     "files": [
-        "dist"
+        "dist",
+        "README.md"
     ],
     "keywords": [
         "pdf",
