--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-styled-pdf",
-    "version": "1.0.3",
+    "version": "0.1.2",
     "description": "Simple react PDF viewer component with controls based on PDF.js.",
     "main": "dist/index.js",
     "module": "dist/index.es.js",
@@ -13,7 +13,8 @@
     "scripts": {
         "build": "rollup -c",
         "start_rollup": "rollup -c -w",
-        "start": "parcel --out-dir build ./example/index.html"
+        "start": "parcel serve --out-dir build ./example/index.html",
+        "build:p": "parcel build --out-dir build ./example/index.html"
     },
     "author": "dalerleo",
     "license": "MIT",
@@ -25,8 +26,9 @@
         "babelrc-rollup": "^3.0.0",
         "gh-pages": "^1.2.0",
         "parcel-bundler": "^1.12.3",
-        "react": "^16.0.0",
-        "react-dom": "^16.4.1",
+        "parcel-plugin-bundle-visualiser": "^1.2.0",
+        "react": "^15.0.0 || ^16.0.0",
+        "react-dom": "^15.0.0 || ^16.0.0",
         "rollup": "^1.17.0",
         "rollup-plugin-babel": "^4.3.3",
         "rollup-plugin-commonjs": "^10.0.1",
@@ -34,11 +36,9 @@
         "rollup-plugin-postcss": "^2.0.3"
     },
     "dependencies": {
-        "bootstrap": "^4.3.1",
-        "jquery": "^3.4.1",
-        "material-design-icons": "^3.0.1",
-        "popper.js": "^1.15.0",
-        "react-pdf-js": "^2.0.5"
+        "prop-types": "^15.7.2",
+        "react-pdf-js": "^2.0.5",
+        "react-styled-pdf": "^0.1.2"
     },
     "peerDependencies": {
         "prop-types": "^15.7.2",
