--- a/package.json
+++ b/package.json
@@ -2,42 +2,18 @@
     "name": "pdf-viewer-reactjs",
     "version": "1.0.5",
     "description": "Simple react PDF viewer component with controls based on PDF.js.",
-    "main": "index",
-    "typings": "index",
-    "repository": {
-        "url": "https://github.com/ansu5555/pdf-viewer-reactjs",
-        "type": "git"
-    },
+    "source": "src/index.js",
+    "main": "dist/pdf-viewer-reactjs.js",
     "scripts": {
-        "build": "./node_modules/.bin/rollup-babel-lib-bundler src/index.js",
+        "test": "echo \"Error: no test specified\" ",
+        "lint": "node_modules/.bin/eslint --fix ./src/*.js ./src/**/*.js ./example/src/*.js ./example/src/**/*.js",
+        "prebuild": "npm run lint",
+        "build": "rollup -c",
         "prepublish": "npm run build"
     },
-    "author": "ansu5555",
-    "license": "MIT",
-    "devDependencies": {
-        "babel-preset-es2015-rollup": "^3.0.0",
-        "babel-preset-react": "^6.16.0",
-        "babel-preset-stage-0": "^6.16.0",
-        "rollup-babel-lib-bundler": "^3.1.0"
-    },
-    "dependencies": {
-        "bootstrap": "^4.3.1",
-        "jquery": "^3.4.1",
-        "material-design-icons": "^3.0.1",
-        "popper.js": "^1.15.0",
-        "prop-types": "^15.6.0",
-        "react": "^16.0.0",
-        "react-pdf-js": "^2.0.5"
-    },
-    "peerDependencies": {
-        "react": ">=15.3.2"
-    },
-    "rollupBabelLibBundler": {
-        "moduleName": "pdf-viewer-reactjs",
-        "dest": "dist",
-        "format": [
-            "cjs"
-        ]
+    "repository": {
+        "type": "git",
+        "url": "git+ssh://git@github.com/ansu5555/pdf-viewer-reactjs.git"
     },
     "keywords": [
         "pdf",
@@ -48,5 +24,45 @@
         "zoom pdf",
         "react",
         "reactjs"
-    ]
+    ],
+    "author": "ansu5555",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/ansu5555/pdf-viewer-reactjs/issues"
+    },
+    "homepage": "https://github.com/ansu5555/pdf-viewer-reactjs#readme",
+    "peerDependencies": {
+        "react": ">=16.8.6",
+        "react-dom": ">=16.8.6"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.7.2",
+        "@babel/preset-env": "^7.7.1",
+        "@babel/preset-react": "^7.7.0",
+        "eslint": "^6.6.0",
+        "eslint-config-prettier": "^6.5.0",
+        "eslint-plugin-import": "^2.18.2",
+        "eslint-plugin-jsx-a11y": "^6.2.3",
+        "eslint-plugin-prettier": "^3.1.1",
+        "eslint-plugin-react": "^7.16.0",
+        "eslint-plugin-react-hooks": "^1.7.0",
+        "husky": "^3.0.9",
+        "prettier": "^1.19.1",
+        "rollup": "^1.27.0",
+        "rollup-plugin-babel": "^4.3.3",
+        "rollup-plugin-uglify": "^6.0.3"
+    },
+    "dependencies": {
+        "bootstrap": "^4.3.1",
+        "jquery": "^3.4.1",
+        "material-design-icons": "^3.0.1",
+        "popper.js": "^1.16.0",
+        "prop-types": "^15.7.2",
+        "react-pdf-js": "^5.1.0"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "npm run lint"
+        }
+    }
 }
