--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     },
     "husky": {
         "hooks": {
-            "pre-commit": "npm run lint"
+            "pre-commit": "npm run lint && npm run build"
         }
     }
 }
