--- a/example/package.json
+++ b/example/package.json
@@ -4,20 +4,19 @@
     "private": true,
     "homepage": "https://ansu5555.github.io/pdf-viewer-reactjs/",
     "dependencies": {
-        "bootstrap": "^4.3.1",
+        "bootstrap": "^4.4.1",
         "pdf-viewer-reactjs": "file:..",
-        "react": "^16.11.0",
-        "react-dom": "^16.11.0"
+        "react": "^16.12.0",
+        "react-dom": "^16.12.0"
     },
     "devDependencies": {
         "gh-pages": "^2.1.1",
-        "react-scripts": "^3.2.0"
+        "react-scripts": "^3.3.0"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
+        "start": "GENERATE_SOURCEMAP=false react-scripts start",
+        "build": "GENERATE_SOURCEMAP=false react-scripts build",
         "test": "react-scripts test --env=jsdom",
-        "eject": "react-scripts eject",
         "predeploy": "npm run build",
         "deploy": "gh-pages -d build"
     },
