--- a/example/package.json
+++ b/example/package.json
@@ -6,16 +6,16 @@
     "dependencies": {
         "bootstrap": "^4.4.1",
         "pdf-viewer-reactjs": "file:..",
-        "react": "^16.12.0",
-        "react-dom": "^16.12.0"
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1"
     },
     "devDependencies": {
-        "gh-pages": "^2.1.1",
-        "react-scripts": "^3.3.0"
+        "gh-pages": "^2.2.0",
+        "react-scripts": "^3.4.1"
     },
     "scripts": {
-        "start": "GENERATE_SOURCEMAP=false react-scripts start",
-        "build": "GENERATE_SOURCEMAP=false react-scripts build",
+        "start": "react-scripts start",
+        "build": "react-scripts build",
         "test": "react-scripts test --env=jsdom",
         "predeploy": "npm run build",
         "deploy": "gh-pages -d build"
