--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "homepage": "https://github.com/ansu5555/pdf-viewer-reactjs#readme",
     "peerDependencies": {
         "react": ">=16.8.6",
-        "react-dom": ">=16.8.6"
+        "react-dom": ">=16.8.6",
+        "bulma": ">=0.8.1",
+        "bulma-helpers": ">=0.3.10",
+        "material-design-icons": ">=3.0.1"
     },
     "devDependencies": {
         "@babel/core": "^7.9.0",
@@ -53,9 +56,6 @@
         "rollup-plugin-uglify": "^6.0.4"
     },
     "dependencies": {
-        "bulma": "^0.8.1",
-        "bulma-helpers": "^0.3.10",
-        "material-design-icons": "^3.0.1",
         "pdfjs-dist": "^2.3.200",
         "prop-types": "^15.7.2"
     },
