--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "main": "dist/pdf-viewer-reactjs.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" ",
-        "lint": "node_modules/.bin/eslint --fix ./src/*.js ./src/**/*.js ./example/src/*.js ./example/src/**/*.js",
+        "lintJS": "node_modules/.bin/eslint --fix ./src/*.js ./src/**/*.js ./example/src/*.js ./example/src/**/*.js",
+        "lintCSS": "node_modules/.bin/stylelint --fix ./example/src/*.css ./example/src/**/*.css",
+        "lint": "npm run lintJS && npm run lintCSS",
         "prebuild": "npm run lint",
         "build": "rollup -c",
         "prepublish": "npm run build"
@@ -60,7 +62,9 @@
         "husky": "^3.1.0",
         "prettier": "^1.19.1",
         "rollup": "^2.26.9",
-        "rollup-plugin-terser": "^7.0.1"
+        "rollup-plugin-terser": "^7.0.1",
+        "stylelint": "^13.9.0",
+        "stylelint-config-standard": "^20.0.0"
     },
     "dependencies": {
         "pdfjs-dist": "^2.6.347",
