--- a/example/package.json
+++ b/example/package.json
@@ -4,25 +4,21 @@
     "private": true,
     "homepage": "https://ansu5555.github.io/pdf-viewer-reactjs/",
     "dependencies": {
-        "bootstrap": "^4.6.0",
         "bulma": "^0.9.2",
-        "bulma-helpers": "^0.3.12",
-        "jquery": "^3.5.1",
         "material-design-icons": "^3.0.1",
-        "pdf-viewer-reactjs": "file:..",
-        "popper.js": "^1.16.1",
-        "react": "^16.14.0",
-        "react-dom": "^16.14.0",
-        "typescript": "^3.9.7"
+        "pdf-viewer-reactjs": "^2.2.3",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
+        "typescript": "^4.1.5"
     },
     "devDependencies": {
-        "gh-pages": "^2.2.0",
-        "react-scripts": "^3.4.4"
+        "gh-pages": "^3.1.0",
+        "react-scripts": "^4.0.2"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test --env=jsdom",
+        "start": "SKIP_PREFLIGHT_CHECK=true react-scripts start",
+        "build": " SKIP_PREFLIGHT_CHECK=true react-scripts build",
+        "test": "SKIP_PREFLIGHT_CHECK=true  react-scripts test --env=jsdom",
         "predeploy": "npm run build",
         "deploy": "gh-pages -d build"
     },
