--- a/example/package.json
+++ b/example/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "bulma": "^0.9.2",
     "material-design-icons": "^3.0.1",
-    "pdf-viewer-reactjs": "^2.2.3",
+    "pdf-viewer-reactjs": "file:..",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "typescript": "^4.1.5"
