Added jest & interated tests

--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "source": "src/index.js",
   "main": "dist/pdf-viewer-reactjs.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" ",
+    "test": "jest",
+    "watch": "jest --watch",
+    "coverage": "jest --coverage",
     "lintJS": "node_modules/.bin/eslint --fix './*js' 'src/**/*.js' 'example/src/**/*.js'",
     "lintCSS": "node_modules/.bin/stylelint --fix 'example/src/**/*.css'",
     "lint": "npm run lintJS && npm run lintCSS",
-    "prebuild": "npm run lint",
+    "prebuild": "npm run lint && npm run test",
     "build": "rollup -c",
     "prepublish": "npm run build"
   },
@@ -51,15 +53,23 @@
     "@babel/preset-react": "^7.12.13",
     "@babel/runtime": "^7.12.13",
     "@rollup/plugin-babel": "^5.3.0",
+    "babel-jest": "^26.6.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^7.20.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.5",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^5.0.9",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-test-renderer": "^17.0.1",
     "rollup": "^2.39.0",
     "rollup-plugin-terser": "^7.0.2",
     "stylelint": "^13.10.0",
