change Rollup confg & .npmignore

--- a/.npmignore
+++ b/.npmignore
@@ -1,8 +1,16 @@
+.github
 .history
+.vscode
+coverage
 example
 src
-.babelrc
-.eslintrc.js
 .eslintignore
+.eslintrc.js
+.gitignore
+.prettierignore
 .prettierrc.js
+.stylelintrc.js
+babel.config.js
+jest.config.js
 rollup.config.js
+setupTests.js
