--- a/package.json
+++ b/package.json
@@ -41,17 +41,17 @@
   },
   "homepage": "https://github.com/ansu5555/pdf-viewer-reactjs#readme",
   "peerDependencies": {
-    "react": ">=16.8.6",
-    "react-dom": ">=16.8.6",
     "bulma": ">=0.8.1",
-    "material-design-icons": ">=3.0.1"
+    "material-design-icons": ">=3.0.1",
+    "react": ">=16.8.6",
+    "react-dom": ">=16.8.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/plugin-transform-runtime": "^7.12.15",
-    "@babel/preset-env": "^7.12.16",
+    "@babel/core": "^7.13.8",
+    "@babel/plugin-transform-runtime": "^7.13.9",
+    "@babel/preset-env": "^7.13.9",
     "@babel/preset-react": "^7.12.13",
-    "@babel/runtime": "^7.12.13",
+    "@babel/runtime": "^7.13.9",
     "@rollup/plugin-babel": "^5.3.0",
     "babel-jest": "^26.6.3",
     "enzyme": "^3.11.0",
@@ -67,10 +67,9 @@
     "husky": "^5.0.9",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
     "react-test-renderer": "^17.0.1",
     "rollup": "^2.39.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
     "stylelint": "^13.10.0",
     "stylelint-config-standard": "^20.0.0"
