--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pdf-viewer-reactjs",
-  "version": "2.2.3",
+  "version": "3.0.0-beta.1",
   "description": "Simple react PDF viewer component with controls based on PDF.js.",
   "source": "src/index.js",
   "main": "dist/pdf-viewer-reactjs.js",
