Add unit test for App

--- a/example/package.json
+++ b/example/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test --env=jsdom --watchAll=false",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
