--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "npm run lintJS && npm run lintCSS",
     "prebuild": "npm run lint && npm run test",
     "build": "rollup -c",
-    "prepare": "npm run build"
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -65,7 +65,7 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-wdio": "^7.0.0",
-    "husky": "^5.0.9",
+    "husky": "^5.1.3",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "react-scripts": "^4.0.3",
@@ -79,10 +79,5 @@
   "dependencies": {
     "pdfjs-dist": "^2.6.347",
     "prop-types": "^15.7.2"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint && npm run build && git add dist"
-    }
   }
 }
