--- a/example/package.json
+++ b/example/package.json
@@ -10,6 +10,7 @@
     "typescript": "^4.1.5"
   },
   "devDependencies": {
+    "@wdio/browserstack-service": "^7.1.1",
     "@wdio/cli": "^7.1.0",
     "@wdio/local-runner": "^7.1.0",
     "@wdio/mocha-framework": "^7.0.7",
@@ -27,6 +28,7 @@
     "build": "react-scripts build",
     "unittest": "react-scripts test --env=jsdom --watchAll=false",
     "e2etest": "wdio run ./wdio.conf.js",
+    "testalllocal": "react-scripts test --env=jsdom --watchAll=false && wdio run ./wdio.conf.local.js",
     "testall": "npm run unittest && npm run e2etest",
     "test": "start-server-and-test start-server http://localhost:3000 testall",
     "predeploy": "npm run build",
